# nia

./: .env.example  .gitignore  ADVANCED_CONFIG_IMPLEMENTATION.md  Makefile  NIA-Environment-Development.json  NIA-Environment-Production.json  NIA-Postman-Collection.json  POSTMAN-AUTOMATION.md  POSTMAN-README.md  README.md  TODO.md  activities (1).xlsx  activities.xlsx  conftest.py  demo.html  demo_server.py  docker-compose.yml  ejemplo-dockerfile-separado.dockerfile  ejemplo-gitlab-ci.yml  ejemplo-monorepo-ci.yml  estrategia-hibrida.md  init_database.sql  package-lock.json  package.json  pyproject.toml  pytest.ini  rag_service_simple.py  tenant_manager_simple.py  test_advanced_configs.py  test_advanced_configs_simple.py  test_database_configs.py
.github/workflows/: update-postman-collection.yml
Nia ChatBot/: Nia Admin v2.html  Nia Admin.html  Nia ChatBot.html  admin-app.jsx  admin-data.js
apps/admin/: next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
docs/: NIA-Blueprint-Part1.md  NIA-Blueprint-Part2.md  NIA-Blueprint-Part3.md  NIA-Blueprint-Part4.md  NIA-Blueprint-Part5.md  NIA_Postman_Collection.json
docs/openapi/: README.md  checkout.json  fallback.json  handoff.json  model-adapter.json  orchestrator.json  rag-service.json  recommender.json  telegram-gateway.json  tenant-manager.json  transcript.json
infra/traefik/: traefik.yml
scripts/: build_experiences_rag.py  fix-dockerfiles.sh  gen_admin_token.py  generate-postman-collection.sh  merge-postman-collections.js  postman-watcher.js  seed.sh  telegram-setup.sh
shared/: __init__.py
(+667 files in other folders)
