# ──────────────────────────────────────────────────────────────────────────────
# NIA Platform — Shared Python dependencies
# Used by ALL services as base. Each service adds its own extras.
# ──────────────────────────────────────────────────────────────────────────────
[tool.poetry]
name = "nia-shared"
version = "1.0.0"
description = "NIA Platform — Shared Python base"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
httpx = "^0.27.0"
redis = {extras = ["hiredis"], version = "^5.0.4"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
structlog = "^24.1.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-exporter-gcp-trace = "^1.6.0"
python-multipart = "^0.0.9"
tenacity = "^8.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
factory-boy = "^3.3.0"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
